# EDA-Footprint-Generator-Data-Frontier

./: CHANGELOG.md  CONTRIBUTING.md  README.md  README.pt-BR.md  api_server.py  cli.py  pyproject.toml
.agents/skills/component_generator/: SKILL.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
core/: footprint_helpers.py  geometria_pads.py  gerador_footprint_v2.py  gerador_symbol.py  importar_lcsc.py
docs/: MANUAL_YAML_REFERENCIA.yaml  index.html
docs/pcm/: packages.json  repository.json
docs/pcm/official/: metadata.json
kicad_plugin/: README_PCM.md  data_frontier_plugin.py  metadata.json
missoes/nina-b406/: ACHADOS.md  emitir_blocos.py
missoes/stx3/: derivar_stx3.py
modulos_config/: NINA_B406.yaml  STM32F103C8T6_C8734.yaml  Stx3.yaml
schemas/: component.schema.json
scripts/: build_pcm_repo.py  gen_pcm_icon.py  setup_github.ps1
tests/: teste_v2.py
